<resources>
    <string name="app_name">MySuperShopper2</string>
    <string name="action_settings">More</string>

    <string name="action_delete_item">Item Deleted</string>
    <string name="action_undo">UNDO?</string>

    <!-- used as tags for shared element transitions -->
    <string name="transition_drawable">drawable</string>
    <string name="transition_message">message</string>
    <string name="transition_time_and_date">date</string>
    <string name="title_toolbar">Shopping List</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_no_extra_found">Error Retrieving Item Detail</string>
    <string name="speakbutton">Speak</string>

    <string name="action_new">New</string>
    <string name="action_save">Save</string>
    <string name="action_choose_table">Choose shop</string>
    <string name="hintforneworsave">Enable checkbox for new shop</string>
    <string name="NeworSavelbl">New?</string>
    <string name="newshopnamehint">New shop name</string>
    <string name="title_neworsaveshop">Click the checkbox to save to a new Shop</string>
    <string name="hint_createnewshop">New shop name</string>
    <string name="btn_lablelsave">Save</string>
    <string name="buttonlabelcancel">Cancel</string>
    <string name="refresh">Refresh</string>
    <string name="title_newshop">Enter name for new shop</string>


</resources>
